SERVER-78864: Fix $_internalSchemaAllowedProperties serialization to be re-parseable