src/mongo/db/matcher/schema/expression_internal_schema_allowed_properties.cpp
@@ -138,7 +138,10 @@ void InternalSchemaAllowedPropertiesMatchExpression::serialize(BSONObjBuilder* b
     std::vector<StringData> sortedProperties(_properties.begin(), _properties.end());
     std::sort(sortedProperties.begin(), sortedProperties.end());
     opts.appendLiteral(&expressionBuilder, "properties", sortedProperties);
-    opts.appendLiteral(&expressionBuilder, "namePlaceholder", _namePlaceholder);
+    // This will be serialized to "i", which is the parser chosen namePlaceholder. Using this
+    // unmodified will have a similar effect to serializing to "?", however it preserves round trip
+    // parsing.
+    expressionBuilder.append("namePlaceholder", _namePlaceholder);
 
     BSONArrayBuilder patternPropertiesBuilder(expressionBuilder.subarrayStart("patternProperties"));
     for (auto&& [pattern, expression] : _patternProperties) {
