jstests/core/json_schema/additional_properties.js
@@ -1,10 +1,6 @@
 // @tags: [
 //   requires_non_retryable_commands,
-//   skip_for_query_stats,
 // ]
-// Note: Separate line for each TODO to ensure the linter checks for each ticket in the queue, but
-// the test shouldn't be formally re-enabled until all TODOs are removed.
-// TODO SERVER-78864 reenable test in query_stats_passthrough
 
 /**
  * Tests for the JSON Schema 'additionalProperties' keyword.
