jstests/core/json_schema/pattern_properties.js
@@ -1,6 +1,5 @@
 // @tags: [
 //   requires_non_retryable_commands,
-//   skip_for_query_stats, # TODO SERVER-78864 reenable test in query_stats_passthrough
 // ]
 
 /**
